--- a/Module_2/prefolio/prefolio.html
+++ b/Module_2/prefolio/prefolio.html
@@ -10,6 +10,7 @@
     <h1>Prefolio Someone</h1>
 
     <h2>Over mij</h2>
+    <img src="someone.jpg">
 
     <p>Mijn naam is Felicia van Stokkum. Ik ben 20 jaar en woon in Hendrik-Ido-Ambacht.</p>
 
@@ -18,6 +19,11 @@
     <p>Ik heb al veel verschillende mbo opleidingen geprobeerd, helaas paste niks bij mij. 
         Toen kwam ik erachter dat ik Software Developer erg interessant vond, na meerdere overwegingen, open dagen en meeloopdagen heb ik er toch voor gekozen. 
         Ik wil later graag mijn eigen bedrijf in de Software, daar liggen mijn ambities dan ook. </p>
+
+        <iframe width="935" height="526" src="https://www.youtube.com/embed/hkHHoKrpFbE" title="Hoe word je een developer in 5 stappen?" 
+        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+        allowfullscreen></iframe>
+
 
     <h2>Opleiding</h2>
 
@@ -43,6 +49,11 @@
         <p><strong>Python Programming</strong><br>
         problem analysis, solution design, structured testing, software quality: DRY, SRP
         </p>
+
+        <video controls width="935">
+            <source src="robotarm.mp4" type="video/mp4">
+            <source src="robotarm.ogv" type="video/ogv">
+        </video>
     
         <p><strong>Verzamelen van data</strong><br>
         SQL queries, where clauses, aggragates, joins
