--- a/Module_2/boardgames/boardgames.html
+++ b/Module_2/boardgames/boardgames.html
@@ -4,41 +4,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <title>Boardgames</title>
 </head>
 
 <body>
-    <h1>Embrace Board Games</h1>
-    <section>
-        <p>Discover the <strong>World </strong> of Board Gaming and Reap the Rewards</p>
-        <h2>The Joy of Board Games</h2>
+    <section class="tekstblok">
+    <h1 class="lettertype">Embrace Board Games</h1>
+        <p class="lettertype2">Discover the <strong>World </strong> of Board Gaming and Reap the Rewards</p>
     </section>
 
-    <h3>Building Social Connections</h3>
+    <h2 class="gekleurde-tekst", class="titel">The Joy of Board Games</h2>
+    <h3 class="gekleurde-tekst2">Building Social Connections</h3>
     <section>
-        <p>Board games go beyond the tabletop and they build lasting connections with friends and family.
-            Gathering around a board game fosters laughter, camaraderie, and shared experiences.
-            From cooperative adventures like Pandemic to strategic classics like Settlers of Catan, board games create
-            bonds
-            and turn acquaintances into lifelong friends.</p>
+        <p class="gekleurde-tekst">Board games go beyond the tabletop and they build lasting connections with friends and family.<br>
+            Gathering around a board game fosters laughter, camaraderie, and shared experiences.<br>
+            From cooperative adventures like Pandemic to strategic classics like Settlers of Catan, <br> board games create
+            bonds and turn acquaintances into lifelong friends.</p>
     </section>
     <img src="codenames.jpg" />
 
-    <h3>An Escape from Screens</h3>
+    <h3 class="gekleurde-tekst2">An Escape from Screens</h3>
     <section>
-        <p>In a world dominated by screens, board games offer a refreshing escape.
-            They engage your senses with tangible components, dice rolls, and immersive artwork.
-            Board games provide a chance to unplug, offering quality face-to-face time and memorable moments.
-            Whether it's an epic journey or a quick card game, board gaming offers a tangible alternative to digital
+        <p class="gekleurde-tekst">In a world dominated by screens, board games offer a refreshing escape.<br>
+            They engage your senses with tangible components, dice rolls, and immersive artwork.<br>
+            Board games provide a chance to unplug, offering quality face-to-face time and memorable moments.<br>
+            Whether it's an epic journey or a quick card game, <br>board gaming offers a tangible alternative to digital
             entertainment.</p>
     </section>
     <video controls width="935">
         <source src="playing.mp4" type="video/mp4">
     </video>
 
-    <h3>Great board games:</h3>
+    <h3 class="gekleurde-tekst2">Great board games:</h3>
     <section>
-        <ul>
+        <ul class="gekleurde-tekst3">
             <li>Catan</li>
             <li>Ticket to Ride</li>
             <li>Pandemic</li>
