--- a/Module_2/prefolio/prefolio.html
+++ b/Module_2/prefolio/prefolio.html
@@ -5,11 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Felicia van Stokkum</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
 
-    <h1>Prefolio Someone</h1>
+    <h1 id="titel">Prefolio Someone</h1>
 
     <section>
         <h2>Over mij</h2>
@@ -42,7 +43,7 @@
 
     <section>
         <h3>Ontwikkeltalen:</h3>
-        <ul>
+        <ul id="lijst">
             <li>Python (uitgebreid)</li>
             <li>HMTL (intro)</li>
             <li>CSS (intro)</li>
