--- a/Module_2/snoepwinkel/snoepwinkel.html
+++ b/Module_2/snoepwinkel/snoepwinkel.html
@@ -2,29 +2,29 @@
 <html>
 <head>
   <title>Snoepwinkel</title>
-  <link rel="stylesheet" href="general.css">
+  <link rel="stylesheet" href="classes.css">
   <meta charset="utf-8">
 </head>
-<body>
+<body id="zwart_lettertype">
   <header>
-    <h1>Kop 1: Groen</h1>
-    <p>Headerparagraaf: Dik en blauw</p>
+    <h1 id="groen">Kop 1: Groen</h1>
+    <p class="dik_en_blauw">Headerparagraaf: Dik en blauw</p>
   </header>
   <section>
-    <h2>Kop 2.1 Oranje</h2>
-    <p>Paragraaf 2.1.1 Dik en blauw</p>
-    <p>Paragraaf 2.1.2 Geel Cursief</p>
-    <p paragraph="last">Paragraaf 2.1.3 Rood en monospace</p>
+    <h2 class="oranje">Kop 2.1 Oranje</h2>
+    <p class="dik_en_blauw">Paragraaf 2.1.1 Dik en blauw</p>
+    <p class="geel_cursief">Paragraaf 2.1.2 Geel Cursief</p>
+    <p paragraph="last" class="rood_monospace">Paragraaf 2.1.3 Rood en monospace</p>
   </section>
-  <p>Unieke tussenparagraaf: Geel en Cursief, maar ook Rode achtergrond</p>
+  <p id="geel_cursief_rood">Unieke tussenparagraaf: Geel en Cursief, maar ook Rode achtergrond</p>
   <section>
-    <h2>Kop 2.2 Oranje</h2>
-    <p>Paragraaf 2.2.1: Dik en blauw</p>
-    <p>Paragraaf 2.2.2: Geel en Cursief</p>
-    <p paragraph="last">Paragraaf 2.2.3: Rood en monospace</p>
+    <h2 class="oranje">Kop 2.2 Oranje</h2>
+    <p class="dik_en_blauw">Paragraaf 2.2.1: Dik en blauw</p>
+    <p class="geel_cursief">Paragraaf 2.2.2: Geel en Cursief</p>
+    <p paragraph="last" class="rood_monospace">Paragraaf 2.2.3: Rood en monospace</p>
   </section>
   <footer>
-    <p>Unieke footerparagraaf: Rood en monospace, maar ook underlined</p>
+    <p id="rood_monospace_lijn">Unieke footerparagraaf: Rood en monospace, maar ook underlined</p>
   </footer>
 </body>
 </html>
