--- a/Module_2/boardgames/boardgames.html
+++ b/Module_2/boardgames/boardgames.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="icon" type="image/favicon.ico" href="images/favicon.ico">
     <title>Boardgames</title>
 </head>
 
@@ -13,7 +14,10 @@
     <h1 class="lettertype">Embrace Board Games</h1>
         <p class="lettertype2">Discover the <strong>World </strong> of Board Gaming and Reap the Rewards</p>
     </section>
-
+    <nav class="nav">
+        <a href="pandemic.html">Pandemic</a>
+        <a href="#">Home</a>
+      </nav>
     <h2 class="gekleurde-tekst", class="titel">The Joy of Board Games</h2>
     <h3 class="gekleurde-tekst2">Building Social Connections</h3>
     <section>
@@ -22,7 +26,7 @@
             From cooperative adventures like Pandemic to strategic classics like Settlers of Catan, <br> board games create
             bonds and turn acquaintances into lifelong friends.</p>
     </section>
-    <img src="codenames.jpg" />
+    <img src="images/codenames.jpg" />
 
     <h3 class="gekleurde-tekst2">An Escape from Screens</h3>
     <section>
@@ -33,7 +37,7 @@
             entertainment.</p>
     </section>
     <video controls width="935">
-        <source src="playing.mp4" type="video/mp4">
+        <source src="images/playing.mp4" type="video/mp4">
     </video>
 
     <h3 class="gekleurde-tekst2">Great board games:</h3>
