--- a/Module_2/prefolio/prefolio/prefolio.html
+++ b/Module_2/prefolio/prefolio/prefolio.html
@@ -6,16 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Felicia van Stokkum</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="icon" type="favicon.ico" href="favicon.ico">
 </head>
 
 <body>
+    <a href="#B1">Ga gelijk naar: "Succesvol afgeronde modules:"</a>
 
     <h1 id="titel">Prefolio Someone</h1>
 
     <section>
         <h2>Over mij</h2>
-        <img src="someone.jpg">
-
+        <a href="projecten.html">
+        <img src="someone.jpg" alt="Someone">
+        </a>
         <p>Mijn naam is Felicia van Stokkum. Ik ben 20 jaar en woon in Hendrik-Ido-Ambacht.</p>
     </section>
 
@@ -56,7 +59,7 @@
 
 
     <section>
-        <h2>Succesvol afgeronde modules:</h2>
+        <h2 id="B1">Succesvol afgeronde modules:</h2>
 
         <p><strong>Bootcamp:</strong><br> Python syntax, toepassing en werking
             value types, expressions, operators, variables, typecasting, conditional statements, while loops, exception
@@ -95,6 +98,16 @@
         <p><strong>Basis ICT</strong><br>
             Intro computers, operating systems, netwerken, client-server, http
         </p>
+    </section>
+    <section>
+        <h3>Mijn projecten</h3>
+        <p>Ik heb een HTML pagina gemaakt met hierop verschillende projecten die ik heb gevonden op het internet. Hiervan plaats ik een linkje hieronder.</p>
+    <nav>
+        <a href="projecten.html" id="link">Mijn projecten</a>
+    </nav>
+    <nav>
+        <a href="projecten.html" target="_blank">Mijn projecten ander tabblad</a>
+    </nav>
     </section>
     <p &copy; Felicia></p>
 </body>
