--- a/Module_2/boardgames/boardgames.html
+++ b/Module_2/boardgames/boardgames.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
-    <link rel="icon" type="image/favicon.ico" href="images/favicon.ico">
+    <link rel="stylesheet" type="text/css" href="styling/style.css">
+    <link rel="icon" type="media/favicon.ico" href="images/favicon.ico">
     <title>Boardgames</title>
 </head>
 
@@ -26,7 +26,7 @@
             From cooperative adventures like Pandemic to strategic classics like Settlers of Catan, <br> board games create
             bonds and turn acquaintances into lifelong friends.</p>
     </section>
-    <img src="images/codenames.jpg" />
+    <img src="media/codenames.jpg" />
 
     <h3 class="gekleurde-tekst2">An Escape from Screens</h3>
     <section>
