--- a/Module_2/prefolio/prefolio/prefolio.html
+++ b/Module_2/prefolio/prefolio/prefolio.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Felicia van Stokkum</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="icon" type="favicon.ico" href="favicon.ico">
+    <link rel="stylesheet" type="text/css" href="styling/style.css">
+    <link rel="icon" type="favicon.ico" href="media/favicon.ico">
 </head>
 
 <body>
@@ -17,7 +17,7 @@
     <section>
         <h2>Over mij</h2>
         <a href="projecten.html">
-        <img src="someone.jpg" alt="Someone">
+        <img src="media/someone.jpg" alt="Someone">
         </a>
         <p>Mijn naam is Felicia van Stokkum. Ik ben 20 jaar en woon in Hendrik-Ido-Ambacht.</p>
     </section>
@@ -71,8 +71,8 @@
         </p>
 
         <video controls width="935">
-            <source src="robotarm.mp4" type="video/mp4">
-            <source src="robotarm.ogv" type="video/ogv">
+            <source src="media/robotarm.mp4" type="video/mp4">
+            <source src="media/robotarm.ogv" type="video/ogv">
         </video>
 
         <p><strong>Verzamelen van data</strong><br>
