--- a/Module_2/prefolio/prefolio/projecten.html
+++ b/Module_2/prefolio/prefolio/projecten.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" type="text/css" href="projecten.css" />
+    <link rel="stylesheet" type="text/css" href="styling/projecten.css" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Eigen projecten</title>
@@ -12,16 +12,16 @@
 
     <h3>Het eerste project:</h3>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non erat finibus, dapibus ex vel, luctus eros. Phasellus dapibus arcu in lectus finibus, ac dapibus nisi viverra. Donec faucibus mollis venenatis. Nulla ex metus, accumsan condimentum imperdiet eu, luctus sit amet urna. Nunc pharetra consectetur suscipit. Praesent consectetur dapibus sem sed vehicula. Quisque egestas scelerisque venenatis. Mauris tortor libero, placerat nec tincidunt et, varius et nisi. Vivamus vehicula volutpat imperdiet. In neque nunc, auctor a erat quis, auctor pharetra velit. Quisque dapibus erat vel dignissim commodo.</p>
-    <img src="html_project_1.jpg" alt="Eerste project">
+    <img src="media/html_project_1.jpg" alt="Eerste project">
 
 
     <h3>Het tweede project:</h3>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non erat finibus, dapibus ex vel, luctus eros. Phasellus dapibus arcu in lectus finibus, ac dapibus nisi viverra. Donec faucibus mollis venenatis. Nulla ex metus, accumsan condimentum imperdiet eu, luctus sit amet urna. Nunc pharetra consectetur suscipit. Praesent consectetur dapibus sem sed vehicula. Quisque egestas scelerisque venenatis. Mauris tortor libero, placerat nec tincidunt et, varius et nisi. Vivamus vehicula volutpat imperdiet. In neque nunc, auctor a erat quis, auctor pharetra velit. Quisque dapibus erat vel dignissim commodo.</p>
-    <img src="html_project_2.png" alt="Tweede project" width="500"> 
+    <img src="media/html_project_2.png" alt="Tweede project" width="500"> 
 
     <h3>Het derde project:</h3>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non erat finibus, dapibus ex vel, luctus eros. Phasellus dapibus arcu in lectus finibus, ac dapibus nisi viverra. Donec faucibus mollis venenatis. Nulla ex metus, accumsan condimentum imperdiet eu, luctus sit amet urna. Nunc pharetra consectetur suscipit. Praesent consectetur dapibus sem sed vehicula. Quisque egestas scelerisque venenatis. Mauris tortor libero, placerat nec tincidunt et, varius et nisi. Vivamus vehicula volutpat imperdiet. In neque nunc, auctor a erat quis, auctor pharetra velit. Quisque dapibus erat vel dignissim commodo.</p>
-    <img src="html_project_3.png" alt="Derde project" width="500"> 
+    <img src="media/html_project_3.png" alt="Derde project" width="500"> 
 
     <h3>Prefolio</h3>
     <a href="prefolio.html">Prefolio</a>
