--- a/Module_2/recepten/recepten.html
+++ b/Module_2/recepten/recepten.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,13 +9,17 @@
 </head>
 
 <body>
-
-<div id="content">
+    <div id="pagina">
+        <a href="voorgerecht.html" id="link">Ga naar het voorgerecht</a>
+        <div id="content">
+            <a href="nagerecht.html" id="link2">Ga naar het nagerecht</a>
+    </div>
     <h1 id="titel">Gehaktbrood</h1>
-    <hr> <!--Dit is een horizontale lijn-->
-    <p id="paragraaf1">Dit gehaktbrood kan prima bij een avondmaaltijd, maar is ook een makkelijk gerecht voor een buffet.</p>
+    <hr> 
+    <p id="paragraaf1">Dit gehaktbrood kan prima bij een avondmaaltijd, maar is ook een makkelijk gerecht voor
+        een buffet.</p>
 
-<p>
+    <p>
     <h3>Ingredienten</h3>
     <ul class="tekst" id="ruimte_ingredienten">
         <li>1 rode paprika</li>
@@ -30,22 +35,29 @@
         <li>1 theelepel tabasco</li>
         <li>peper</li>
     </ul>
-</p>
+    </p>
 
-<p>
+    <p>
     <h3>Bereidingswijze</h3>
     <ol class="tekst" id="ruimte_bereiding">
-    <li>Warm de oven voor op 175 graden Celsius.</li>
-    <li>Maak de paprika's schoon en snijd ze in kleine stukjes. Maak de ui schoon en snijd deze fijn. Maak de knoflook schoon. Snijd de bacon in dunne reepjes. Hak de peterselie fijn. </li>
-    <li>Doe het gehakt, paprika, ui, bacon, peterselie, paneermeel, ei, tomatenpuree, tabasco en peper in een kom. Pers de tenen knoflook erboven uit en kneed goed tot dat alle ingredienten zijn gemengd.</li>
-    <li>Druk het mengsel in een cakevorm en bak deze ongeveer 1 uur in de oven.</li>
-    <li>Haal de vorm uit de oven. Laat het even afkoelen en haal het daarna uit de vorm. Serveer het gehaktbrood op een schotel.</li>
-   </ol>
-</p>
-   <img src="gehaktbrood.jpg" alt="Gehaktbrood" width="500" height="600">
+        <li>Warm de oven voor op 175 graden Celsius.</li>
+        <li>Maak de paprika's schoon en snijd ze in kleine stukjes. Maak de ui schoon en snijd deze fijn. Maak
+            de knoflook schoon. Snijd de bacon in dunne reepjes. Hak de peterselie fijn. </li>
+        <li>Doe het gehakt, paprika, ui, bacon, peterselie, paneermeel, ei, tomatenpuree, tabasco en peper in
+            een kom. Pers de tenen knoflook erboven uit en kneed goed tot dat alle ingredienten zijn gemengd.
+        </li>
+        <li>Druk het mengsel in een cakevorm en bak deze ongeveer 1 uur in de oven.</li>
+        <li>Haal de vorm uit de oven. Laat het even afkoelen en haal het daarna uit de vorm. Serveer het
+            gehaktbrood op een schotel.</li>
+    </ol>
+    </p>
+    <img src="gehaktbrood.jpg" alt="Gehaktbrood" width="500" height="600">
 
-<p class="tekst" id="groen"><strong>Tip</strong> Lekker met meergranenstokbrood. Voor een minder zout gehaktbrood kun je de bacon weglaten.</p>
+    <p class="tekst" id="groen" id="padding"><strong>Tip</strong> Lekker met meergranenstokbrood. Voor een
+        minder zout gehaktbrood kun je de bacon weglaten.</p>
 
+    </div>
 </div>
 </body>
+
 </html>
