--- a/Module_2/prefolio/prefolio/prefolio.html
+++ b/Module_2/prefolio/prefolio/prefolio.html
@@ -17,7 +17,7 @@
     <section>
         <h2>Over mij</h2>
         <a href="projecten.html">
-        <img src="media/someone.jpg" alt="Someone">
+        <img class="video" src="media/someone.jpg" alt="Someone">
         </a>
         <p>Mijn naam is Felicia van Stokkum. Ik ben 20 jaar en woon in Hendrik-Ido-Ambacht.</p>
     </section>
@@ -32,7 +32,7 @@
     </section>
 
 
-    <iframe width="935" height="526" src="https://www.youtube.com/embed/hkHHoKrpFbE"
+    <iframe class="video" width="935" height="526" src="https://www.youtube.com/embed/hkHHoKrpFbE"
         title="Hoe word je een developer in 5 stappen?" frameborder="0"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
         allowfullscreen></iframe>
@@ -70,7 +70,7 @@
             problem analysis, solution design, structured testing, software quality: DRY, SRP
         </p>
 
-        <video controls width="935">
+        <video class="video" controls width="935">
             <source src="media/robotarm.mp4" type="video/mp4">
             <source src="media/robotarm.ogv" type="video/ogv">
         </video>
