--- a/Module_2/extra/responsive/responsive.html
+++ b/Module_2/extra/responsive/responsive.html
@@ -32,7 +32,7 @@
     <p>Mini schermpje</p>
   </section>
   <main>
-    <p>In de tijd van mijn oma zaten we achter onze kolossale desktopcomputers en voelden ons als digitale krijgers.<img src="krijgers.jpg" class="large-img">Maar nu, webdesigners hebben ons veranderd in moderne nomaden. Overal waar we gaan, hebben we alleen dat kleine schermpje in onze handen nodig om de wereld te ontdekken.</p>
+    <p>In de tijd van mijn oma zaten we achter onze kolossale desktopcomputers en voelden ons als digitale krijgers.<img src="krijgers.jpg" alt="Krijgers" id="krijgersfoto" widht="500" height="350">Maar nu, webdesigners hebben ons veranderd in moderne nomaden. Overal waar we gaan, hebben we alleen dat kleine schermpje in onze handen nodig om de wereld te ontdekken.</p>
     <p>Ik zag laatst iemand midden op straat staan, volledig geobsedeerd door zijn smartphone, alsof de echte wereld slechts een irritante achtergrond was. Webdesigners hebben ons geleerd dat de wereld buiten slechts een decor is voor onze online avonturen. Proost op de helden van het responsieve tijdperk!</p>
 </body>
 
