--- a/Module_3/Deel_1/Python/GUI/buggy3_js.html
+++ b/Module_3/Deel_1/Python/GUI/buggy3_js.html
@@ -25,7 +25,7 @@
     let diameterInput = input_diameter.value; 
     let height = Number(heightInput); 
     let diameter = Number(diameterInput); 
-    let content = calculateCilinderContent(diameter, height)
+    let content = calculateCilinderContent(diameter, height);
     result.textContent = content.toFixed(2); 
   }
 
