--- a/Module_3/Deel_1/Python/GUI/wedstrijdteller/wedstrijdteller.html
+++ b/Module_3/Deel_1/Python/GUI/wedstrijdteller/wedstrijdteller.html
@@ -6,6 +6,12 @@
 </head>
 <body>
   <h1>Wedstrijd score</h1>
+  <div id="setScores">
+    <div class="teamsets">Team 1 Sets: <span id="counterTeam1Sets">0</span></div>
+    <div class="teamsets">Team 2 Sets: <span id="counterTeam2Sets">0</span></div>
+  </div>
+  <div id="counterTeam1Sets"></div>
+  <div id="counterTeam2Sets"></div>
   <div id="input_teams">
     <p>
       <label>Team 1: </label>
