--- a/Module_3/sushi_go/sushi.html
+++ b/Module_3/sushi_go/sushi.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style_sushi.css">
     <title>Sushi Bestelformulier</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
@@ -12,28 +11,29 @@
         <h1>Sushi Bestelformulier</h1>
         <div id="sushiForm">
             <div class="form-group sushi-item">
-                <label for="sushi1" class="form-label">Maki komkommer:</label>
+                <label for="maki_komkommer" class="form-label">Maki komkommer:</label>
                 <input type="number" class="form-control" id="maki_komkommer" name="maki_komkommer" min="0" max="10" value="0">
             </div>
             <div class="form-group sushi-item">
-                <label for="sushi2" class="form-label">Sashimi:</label>
+                <label for="sashimi" class="form-label">Sashimi:</label>
                 <input type="number" class="form-control" id="sashimi" name="sashimi" min="0" max="10" value="0">
             </div>
             <div class="form-group sushi-item">
-                <label for="sushi3" class="form-label">nigiri:</label>
+                <label for="nigiri" class="form-label">Nigiri:</label>
                 <input type="number" class="form-control" id="nigiri" name="nigiri" min="0" max="10" value="0">
             </div>
             <div class="form-group sushi-item">
-                <label for="sushi4" class="form-label">california roll:</label>
+                <label for="california_roll" class="form-label">California roll:</label>
                 <input type="number" class="form-control" id="california_roll" name="california_roll" min="0" max="10" value="0">
             </div>
             <div class="form-group sushi-item">
-                <label for="sushi5" class="form-label">crispy roll:</label>
+                <label for="crispy_roll" class="form-label">Crispy roll:</label>
                 <input type="number" class="form-control" id="crispy_roll" name="crispy_roll" min="0" max="10" value="0">
             </div>
             <button type="button" class="btn btn-primary" onclick="validateOrder()">Bestellen</button>
         </div>
         <p id="totalPiecesWarning">Je kunt maximaal 10 stuks sushi bestellen.</p>
+        <p id="totalPieces">Totaal te bestellen stuks: 0</p>
     </div>
 
     <script>
@@ -44,13 +44,22 @@
                 total += parseInt(input.value, 10);
             });
 
+            document.getElementById('totalPieces').innerText = 'Totaal te bestellen stuks: ' + total;
+
             if (total > 10) {
                 document.getElementById('totalPiecesWarning').style.display = 'block';
+                alert('Je bestelling is geplaatst!');
             } else {
                 document.getElementById('totalPiecesWarning').style.display = 'none';
-                alert('Je bestelling is geplaatst!');
             }
         }
+
+        document.addEventListener('DOMContentLoaded', () => {
+            const inputs = document.querySelectorAll('#sushiForm input[type="number"]');
+            inputs.forEach(input => {
+                input.addEventListener('change', validateOrder);
+            });
+        });
     </script>
 </body>
 </html>
