--- a/Module_3/sushi_go/sushi.html
+++ b/Module_3/sushi_go/sushi.html
@@ -37,7 +37,7 @@
         </div>
             <button type="button" class="btn btn-primary" onclick="validateOrder()">Bestellen</button>
         </div>
-        <p id="minItemsWarning" style="display:alert;">Je moet minimaal 6 stuks sushi bestellen per ronde.</p>
+        <p id="minItemsWarning" style="display:block;">Je moet minimaal 6 stuks sushi bestellen per ronde.</p>
         <p id="totalPerRound">Totaal te bestellen stuks deze ronde: 10</p> <!-- Dit element toont het totaal aantal items per ronde -->
         <p id="totalOrdered">Totaal geleverd in alle rondes: 0</p>
         <p id="roundsLeft">Rondes over: 6</p>
