--- a/Module_3/Deel_3/examples/snippet_a/index.html
+++ b/Module_3/Deel_3/examples/snippet_a/index.html
@@ -13,7 +13,7 @@
 			<div class="row">
 				<div class="col-6" id="original">
 					<h2>Static HTML</h2>
-					<button type="button" class="btn btn-primary">Remove me</button>
+					<button id='button2' type="button" class="btn btn-primary">Remove Me</button>
 				</div>
 				<div class="col-6" id="playground">
 					<h2>Dynamische HTML</h2>
