--- a/Module_3/Deel_3/exercises/cookie_jar/index.html
+++ b/Module_3/Deel_3/exercises/cookie_jar/index.html
@@ -11,6 +11,7 @@
 	<div id="container">
 		<div id="jar-lit"></div>
 		<div id="cookie-jar"></div>
+		<div id="take-cookie></div>"
 	</div>
 	<script src="script.js"></script>
 </body>
